# Auto-cutter

./: .gitignore  .pre-commit-config.yaml  AI-NOTICE.md  CONTRIBUTING.md  Makefile  README.md  align_eyes.py  build_binary.ps1  build_binary.sh  crop_portrait.py  crop_source.py  deglow.py  finalize-cutout.py  image_cropper.spec  install.ps1  install.sh  launch_gui.bat  launch_gui.sh  pipeline.sh  pyproject.toml  rater.py  remove_background-v2.py  remove_background-v3.py  remove_background.py  renovate.json  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: baseline.json  create_golden.py
docs/: ARCHITECTURE.md  COMPONENTS.md  DECISIONS.md  USAGE.md
scripts/: align.py  crop_cutout.py  crop_source.py  remove_background.py
src/image_cropper/: __init__.py  __main__.py  errors.py  gui.py  models.py  sitsi_client.py  types.py  validation.py
src/image_cropper/pipeline/: __init__.py  align.py  benchmark.py  crop_cutout.py  crop_source.py  deglow.py  download_queue.py  finalize_cutout.py  remove_background.py  submit_cutout.py
templates/: rater.html
tests/: conftest.py  test_align_math.py  test_benchmark.py  test_benchmark_baseline.py  test_crop_cutout_math.py  test_crop_source_math.py  test_deglow.py  test_download_queue.py  test_errors.py  test_finalize_math.py  test_sitsi_client.py  test_types.py  test_validation.py
