[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-cropper"
version = "0.1.0"
description = "Automated portrait pipeline + cross-platform GUI: align → crop → remove background → portrait crop → deglow"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Krissmed" }]
license = { text = "Personal use" }
keywords = ["image", "portrait", "face", "pipeline", "gui", "background-removal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    # GUI
    "PySide6>=6.6",

    # Face detection / alignment
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",

    # Background removal (heavy ML stack)
    "torch>=2.5",
    "torchvision>=0.20",
    "transformers>=4.45",
    "timm>=1.0",
    "einops>=0.8",
    "huggingface_hub>=0.25",
    "kornia>=0.7",

    # Image processing
    "Pillow>=10.0.0",
    "numpy>=1.26",
    "scipy>=1.11",

    # Download queue
    "requests>=2.31",
    "beautifulsoup4>=4.12",

    # dlib source builds fail on recent macOS SDKs; dlib-bin gives prebuilt wheels.
    # On Linux/Windows dlib-bin also has wheels, so use it everywhere.
    "dlib-bin>=20.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
    "types-beautifulsoup4>=4.12.0",
]
build = [
    # PyInstaller — for building standalone binaries (large, optional)
    "pyinstaller>=6.0",
]

[project.scripts]
# GUI launcher — installed as `image-cropper` on PATH
image-cropper = "image_cropper.gui:main"

# Pipeline step entry points (useful for shell scripts and CI)
ic-align         = "image_cropper.pipeline.align:main"
ic-crop-face     = "image_cropper.pipeline.crop_source:main"
ic-remove-bg     = "image_cropper.pipeline.remove_background:main"
ic-crop-portrait = "image_cropper.pipeline.crop_cutout:main"
ic-deglow        = "image_cropper.pipeline.deglow:main"
ic-download      = "image_cropper.pipeline.download_queue:main"

[project.urls]
Homepage = "https://github.com/Krissmed/image-cropper"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundle the small (3.6MB) MediaPipe face landmarker model.
# Larger models (dlib 95MB) are auto-downloaded to the user cache dir.
image_cropper = ["data/*.task", "data/*.tflite"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["image_cropper"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
