[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-cropper"
version = "0.1.0"
description = "Automated portrait pipeline + cross-platform GUI: align → crop → remove background → portrait crop → deglow"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Krissmed" }]
license = { text = "Personal use" }
keywords = ["image", "portrait", "face", "pipeline", "gui", "background-removal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    # GUI
    "PySide6>=6.6",

    # Face detection / alignment
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",

    # Background removal (heavy ML stack)
    "torch>=2.5",
    "torchvision>=0.20",
    "transformers>=4.45",
    "timm>=1.0",
    "einops>=0.8",
    "huggingface_hub>=0.25",
    "kornia>=0.7",

    # Image processing
    "Pillow>=10.0.0",
    "numpy>=1.26",
    "scipy>=1.11",

    # Download queue
    "requests>=2.31",
    "beautifulsoup4>=4.12",

    # dlib source builds fail on recent macOS SDKs; dlib-bin gives prebuilt wheels.
    # On Linux/Windows dlib-bin also has wheels, so use it everywhere.
    "dlib-bin>=20.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pre-commit>=3.7.0",
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
    "types-beautifulsoup4>=4.12.0",
]
build = [
    # PyInstaller — for building standalone binaries (large, optional)
    "pyinstaller>=6.0",
]

[project.scripts]
# GUI launcher — installed as `image-cropper` on PATH
image-cropper = "image_cropper.gui:main"

# Pipeline step entry points (useful for shell scripts and CI)
ic-align         = "image_cropper.pipeline.align:main"
ic-crop-face     = "image_cropper.pipeline.crop_source:main"
ic-remove-bg     = "image_cropper.pipeline.remove_background:main"
ic-crop-portrait = "image_cropper.pipeline.crop_cutout:main"
ic-deglow        = "image_cropper.pipeline.deglow:main"
ic-download      = "image_cropper.pipeline.download_queue:main"

[project.urls]
Homepage = "https://github.com/Krissmed/image-cropper"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundle the small (3.6MB) MediaPipe face landmarker model.
# Larger models (dlib 95MB) are auto-downloaded to the user cache dir.
image_cropper = ["data/*.task", "data/*.tflite"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["image_cropper"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
# Strict flags are enabled per-module below as each one is brought up to
# the new contract. Keeping the global default lax means CI stays green
# while the pipeline conversion lands one module at a time.

# Defensive-programming modules are fully typed and held to strict rules.
[[tool.mypy.overrides]]
module = "image_cropper.errors"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.types"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.validation"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.models"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

# Pipeline modules get strict mode flipped on one at a time as they're
# converted to the new typed-result / value-object contracts.
[[tool.mypy.overrides]]
module = "image_cropper.pipeline.benchmark"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.pipeline.finalize_cutout"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.pipeline.align"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

# Modules pending Phase 4 conversion: skip type checking until they're
# refactored to use the new value objects + validators. Each entry below
# is removed (and replaced with strict-mode opt-in above) as its
# corresponding module is converted.

[[tool.mypy.overrides]]
module = "image_cropper.pipeline.crop_source"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.pipeline.crop_cutout"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.pipeline.deglow"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.pipeline.remove_background"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "image_cropper.pipeline.download_queue"
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

# gui.py stays lax because PySide6's type stubs are incomplete and noisy.
[[tool.mypy.overrides]]
module = "image_cropper.gui"
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
